se actualizan requerimientos